<resources>
    <string name="app_name">Academy Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
    <string name="name_avengers">Avengers: End Game</string>
    <string name="name_tenet">Tenet</string>
    <string name="name_black_widow">Black Widow</string>
    <string name="name_wonder_woman">Wonder Woman 1984</string>
    <string name="rank13plus">13+</string>
    <string name="tag_avengers">Action, Adventure, Fantasy</string>
    <string name="tag_tenet">Action, Sci-Fi, Thriller</string>
    <string name="tag_black_widow">Action, Adventure, Sci-Fi</string>
    <string name="tag_wonder_woman">Action, Adventure, Fantasy</string>
    <string name="review_count">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="heading">Cast</string>
    <string name="robert_downey">Robert Downey Jr.</string>
    <string name="chris_hemsw">Chris Hemsworth</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="movies_list">Movies list</string>
    <string name="duration">137 min</string>
</resources>