<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        tools:context=".ui.movie_details.FragmentMoviesDetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:foreground="@drawable/mask"
                android:src="@drawable/orig"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="59dp"
                android:drawablePadding="8dp"
                android:text="@string/back"
                android:textAppearance="@style/back"
                app:drawableStartCompat="@drawable/ic_path"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:lineSpacingExtra="0sp"
                android:text="@string/name_avengers"
                android:textAppearance="@style/name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/movie_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image" />

            <TextView
                android:id="@+id/ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rect_rounded_5dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/rank13plus"
                android:textAppearance="@style/ranking"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name" />

            <TextView
                android:id="@+id/tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:text="@string/tag_avengers"
                android:textAppearance="@style/tag"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:theme="@style/ratingStyle"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/tag" />

            <TextView
                android:id="@+id/review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:gravity="center_vertical"
                android:text="@string/review_count"
                android:textAllCaps="true"
                android:textAppearance="@style/review"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toTopOf="@+id/rating" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/storyline"
                android:textAppearance="@style/storyline"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/rating" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:lineSpacingExtra="4sp"
                android:paddingVertical="8dp"
                android:text="@string/description"
                android:textAppearance="@style/description"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/storyline" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/heading"
                android:textAppearance="@style/cast"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:adjustViewBounds="true"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                tools:itemCount="4"
                tools:listitem="@layout/view_holder_actor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>